updated button styling

--- a/more.html
+++ b/more.html
@@ -18,13 +18,13 @@
                 <div id="searchBox">
                     <h1 id="advSearchHeading">Advanced Search</h1>
                     Find pages with… “all these words:”
-                    <input type="text" name="as_q" id="allW">
+                    <input type="text" name="as_q" id="allW" class="advInput">
                     Find pages with… “this exact word or phrase:”
-                    <input type="text" name="as_epq" id="exactW">
+                    <input type="text" name="as_epq" id="exactW" class="advInput">
                     Find pages with… “any of these words:”
-                    <input type="text" name="as_oq" id="anyW">
+                    <input type="text" name="as_oq" id="anyW" class="advInput">
                     Find pages with… “none of these words:”
-                    <input type="text" name="as_eq" id="noneW">
+                    <input type="text" name="as_eq" id="noneW" class="advInput">
                     <input type="submit" value="Advanced Search"
                     id="btn">
                 </div>
