changed some buttons and add lucky button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
                 <div id="searchBox">
                     <input type="text" name="q" id="search">
                 </div>
+                <div id="buttonContainer">
                 <input type="submit" value="Google Search" id=
                 'btn'>
+                <input type="submit" name="btnI" value="I am Feeling Lucky" class="button" id='btn'>
+            </div>
             </form>
             <div id="OptionContainer">
                 <ul class="grid">
